# SuperFish

./: .env.example  .gitignore  .lintstagedrc.cjs  .prettierignore  AGENTS.md  Dockerfile  README-ZH.md  README.md  commitlint.config.mjs  docker-compose.scale.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  docker-image.yml
apps/api/: package.json  pyproject.toml  requirements.txt  run.py
apps/api/app/: __init__.py  config.py  db.py  db_models.py  deps.py  jobqueue.py  jobs.py  legacy_flask.py  main.py  settings.py  worker.py
apps/api/app/api/: __init__.py  report.py
apps/api/app/core/: errors.py  redis_lock.py  settings.py
apps/api/app/domain/: __init__.py  narrative.py  project.py  report.py  simulation.py  task.py
apps/api/app/models/: __init__.py  project.py  task.py
apps/api/app/repositories/: __init__.py  graph_repo.py  interview_trace_repo.py  project_repo.py  report_repo.py  run_state_repo.py  simulation_repo.py  task_repo.py
apps/api/app/routers/: auth.py  graph.py  report.py  simulation.py
apps/api/app/routers/simulation/: __init__.py  _shared.py  entities.py  env.py  interview.py  lifecycle.py  results.py  run.py
apps/api/app/schemas/: __init__.py  auth.py  graph.py  report.py  simulation.py
apps/api/app/services/: __init__.py  entity_resolution.py  graph_builder.py  graph_entity_reader.py  graph_memory_updater.py  graph_tools.py  neo4j_entity_reader.py  neo4j_graph_memory_updater.py  neo4j_tools.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py
apps/api/app/services/narrative/: engine.py  report.py  runner.py  seed_builder.py
apps/api/app/services/report/: __init__.py  agent.py  logs.py  manager.py  prompts.py  react_parser.py  tool_registry.py
apps/api/app/services/simulation/: log_reader.py  monitor.py  reconciler.py
apps/api/app/utils/: __init__.py  file_parser.py  graph_store.py  llm_client.py  locale.py  logger.py  mailer.py  neo4j_graph_utils.py  object_store.py  rate_limit.py  retry.py  security.py
apps/api/migrations/versions/: 20260622_1200_b1c2d3e4f5a6_projects_add_kind.py  20260622_1400_c2d3e4f5a6b7_projects_add_narrative_mode.py
apps/api/scripts/: _ipc_redis.py  agent_memory.py  backfill_graphs_to_postgres.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
apps/api/tests/: conftest.py  test_api.py  test_entity_resolution.py  test_graph_store.py  test_ipc_redis.py  test_llm_client.py  test_narrative_fold.py  test_narrative_runner.py  test_react_parser.py  test_redis_lock.py  test_report_section_writer.py  test_simulation_quota_sync.py  test_simulation_runner.py  test_tool_registry.py
apps/web/: .gitignore  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  router.tsx
apps/web/src/components/: AuroraBackground.tsx  GraphPanel.tsx  GraphPanelG6.tsx  HistoryDatabase.tsx  HistoryDatabase.vue  LanguageSwitcher.tsx  Markdown.tsx  PagePlaceholder.tsx  RouteErrorElement.tsx  Step1GraphBuild.tsx  Step2EnvSetup.tsx  Step2EnvSetup.vue  Step3Narrative.tsx  Step3Simulation.tsx  Step4Report.tsx  Step5Interaction.tsx  StepCard.tsx  SystemLogTerminal.tsx  ThemeSwitcher.tsx  WorkflowLayout.tsx
apps/web/src/hooks/: useDedupedLog.test.ts  useDedupedLog.ts  useMediaQuery.ts  usePolling.test.ts  usePolling.ts  (+2 more)
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: __init__.py  graph_builder.py  neo4j_entity_reader.py  neo4j_graph_memory_updater.py  neo4j_tools.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_manager.py  simulation_runner.py
backend/app/utils/: llm_client.py  logger.py  neo4j_graph_utils.py  zep_paging.py
deploy/nginx/: Dockerfile  nginx.conf
docs/: narrative-engine-design.md
frontend/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: GraphPanel.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue  ThemeSwitcher.vue
frontend/src/store/: theme.js
frontend/src/views/: Home.vue  InteractionView.vue  MainView.vue  Process.vue  ReportView.vue  SimulationRunView.vue  SimulationView.vue
locales/: en.json  zh.json
scripts/: dev.sh
(+104 files in other folders)
