[project]
name = "superfish-backend"
version = "0.1.0"
description = "SuperFish - 简洁通用的群体智能引擎，预测万物"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0" }
authors = [
    { name = "SuperFish Team" }
]

dependencies = [
    # 核心框架（FastAPI）
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # LLM 相关
    "openai>=1.0.0",
    # Redis（任务状态持久化，跨进程/重启不丢失）
    "redis>=5.0.0",
    # OASIS 社交媒体模拟
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    # 文件处理
    "PyMuPDF>=1.24.0",
    # 编码检测（支持非UTF-8编码的文本文件）
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # 配置管理（BaseSettings）
    "pydantic-settings>=2.0.0",
    "llama-index-core>=0.14.22",
    "llama-index-llms-openai-like>=0.7.2",
    # 关系型元数据持久化（项目/任务），psycopg3 同步驱动
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    # S3 兼容对象存储（RustFS）客户端
    "boto3>=1.34.0",
    # 任务队列（Redis）+ 独立 worker，使长任务可跨进程/副本执行与观测
    "arq>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "alembic>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
# scripts 为独立模拟脚本，迁移期暂不纳入静态检查
extend-exclude = ["scripts", ".venv"]

[tool.ruff.lint]
# E/F 基础，I 导入排序，B bugbear，UP 现代化，W 警告
select = ["E", "F", "I", "B", "UP", "W"]
# E501 行宽交给 formatter；B008（FastAPI Depends/Query 默认值）需放行；
# E741(歧义变量名 l)/B007(循环变量未用) 在图算法等遗留代码中价值低，project 级放行
ignore = ["E501", "B008", "E741", "B007"]

[tool.ruff.lint.per-file-ignores]
# main.py 需在所有导入前执行 warnings.filterwarnings，故允许导入不在顶部
"app/main.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # 第三方(camel/llama-index 等)无类型存根
disallow_untyped_defs = false   # 渐进式：先不强制全量注解
warn_unused_ignores = true
warn_redundant_casts = true
follow_imports = "silent"       # 仅报告被显式检查文件的错误（导入的模块静默）
exclude = ["scripts/", "\\.venv/"]

# 渐进式收紧：graph/report 路由 + schemas/deps/main/config 已纳入门禁；
# 遗留 service/model/util 层与体量较大的 simulation 路由暂忽略，后续逐模块清理后移出。
[[tool.mypy.overrides]]
module = [
    "app.services.*",
    "app.models.*",
    "app.utils.*",
    "app.routers.simulation",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
